force-app/main/default/objects/RTEvent__c/fields/Event_Booking_Origin__c.field-meta.xml
<CustomField>
    <fullName>Event_Booking_Origin__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
Indicates how this event order was requested (phone, email, web form)</description>
    <inlineHelpText>Indicates how this event order was requested.</inlineHelpText>
    <label>Event Booking Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Web Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>