force-app/main/default/objects/RTEvent__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>Displays date of event.</inlineHelpText>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>