force-app/main/default/objects/RTEvent__c/fields/Event_Manager_Notes_New__c.field-meta.xml
<CustomField>
    <fullName>Event_Manager_Notes_New__c</fullName>
    <label>Event Manager Notes - New</label>
    <length>62487</length>
    <type>LongTextArea</type>
</CustomField>