force-app/main/default/objects/RTEvent__c/fields/Event_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Event_Recorded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Would the customer like the event recorded?</description>
    <label>Event Recorded</label>
    <type>Checkbox</type>
</CustomField>