force-app/main/default/objects/RTEvent__c/fields/Event_Reporting_Fee__c.field-meta.xml
<CustomField>
    <fullName>Event_Reporting_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Event Reporting Fee</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>