force-app/main/default/objects/RTEvent__c/fields/Event_Webcasting_Rates__c.field-meta.xml
<CustomField>
    <fullName>Event_Webcasting_Rates__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event &amp; Webcasting Rates</label>
    <referenceTo>Event_Webcasting_Rates__c</referenceTo>
    <relationshipLabel>RT Events</relationshipLabel>
    <relationshipName>RT_Events</relationshipName>
    <type>Lookup</type>
</CustomField>