force-app/main/default/objects/RTEvent__c/fields/eventManager__c.field-meta.xml
<CustomField>
    <fullName>eventManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Event Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RT_Events</relationshipName>
    <type>Lookup</type>
</CustomField>