force-app/main/default/objects/RTEvent__c/fields/Expected_Number_of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Expected_Number_of_Attendees__c</fullName>
    <label>Expected Number of Attendees</label>
    <type>TextArea</type>
</CustomField>