force-app/main/default/objects/RTEvent__c/fields/Expected_Number_of_Attendess__c.field-meta.xml
<CustomField>
    <fullName>Expected_Number_of_Attendess__c</fullName>
    <label>Expected Number of Attendess</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>