force-app/main/default/objects/RTEvent__c/fields/First_Access_Code_Event__c.field-meta.xml
<CustomField>
    <fullName>First_Access_Code_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Access Code Event</label>
    <type>Checkbox</type>
</CustomField>