force-app/main/default/objects/RTEvent__c/fields/First_Chairperson_Event__c.field-meta.xml
<CustomField>
    <fullName>First_Chairperson_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CAUTION - USED IN INTEGRATIONS
This box should be checked if it the first event scheduled for the chairperson.</description>
    <inlineHelpText>Check this box if this is the first event for this Chairperson.</inlineHelpText>
    <label>First Chairperson Event</label>
    <type>Checkbox</type>
</CustomField>