force-app/main/default/objects/RTEvent__c/fields/First_Organizer_Event__c.field-meta.xml
<CustomField>
    <fullName>First_Organizer_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**CAUTION - USED IN INTEGRATIONS**
First time Event for Organizer</description>
    <label>First Organizer Event</label>
    <type>Checkbox</type>
</CustomField>