force-app/main/default/objects/RTEvent__c/fields/First_Presenter_Event__c.field-meta.xml
<CustomField>
    <fullName>First_Presenter_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>First time Event for Presenter</description>
    <label>First Presenter Event</label>
    <type>Checkbox</type>
</CustomField>