force-app/main/default/objects/RTEvent__c/fields/Full_Event_Moderation__c.field-meta.xml
<CustomField>
    <fullName>Full_Event_Moderation__c</fullName>
    <description>Includes 30 min pre-conf + 60 min live event; prorate for each add&apos;l 30 min</description>
    <inlineHelpText>Includes 30 min pre-conf + 60 min live event; prorate for each add&apos;l 30 min</inlineHelpText>
    <label>Full Event Moderation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>