force-app/main/default/objects/RTEvent__c/fields/Full_Event_Moderation_Add_l_Min__c.field-meta.xml
<CustomField>
    <fullName>Full_Event_Moderation_Add_l_Min__c</fullName>
    <formula>Event_Webcasting_Rates__r.Full_Event_Moderation_Add_l_Min__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Event Moderation Add&#39;l Min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>