force-app/main/default/objects/RTEvent__c/fields/Host_Control_Who__c.field-meta.xml
<CustomField>
    <fullName>Host_Control_Who__c</fullName>
    <description>Who is the host?</description>
    <inlineHelpText>Who is the host?</inlineHelpText>
    <label>Host Controls Who</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>