force-app/main/default/objects/RTEvent__c/fields/Host_Controls_View_Why__c.field-meta.xml
<CustomField>
    <fullName>Host_Controls_View_Why__c</fullName>
    <description>Why is this the ECD / Leader View?</description>
    <inlineHelpText>Why is this the ECD / Leader View?</inlineHelpText>
    <label>Host Controls Why</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>