force-app/main/default/objects/RTEvent__c/fields/Host_Controls_Who__c.field-meta.xml
<CustomField>
    <fullName>Host_Controls_Who__c</fullName>
    <label>Host Controls Who</label>
    <type>TextArea</type>
</CustomField>