force-app/main/default/objects/RTEvent__c/fields/Host_Controls_Why__c.field-meta.xml
<CustomField>
    <fullName>Host_Controls_Why__c</fullName>
    <label>Host Controls Why</label>
    <type>TextArea</type>
</CustomField>