force-app/main/default/objects/RTEvent__c/fields/Igloo_Conference_Plus_Instance_ID__c.field-meta.xml
<CustomField>
    <fullName>Igloo_Conference_Plus_Instance_ID__c</fullName>
    <externalId>true</externalId>
    <label>Igloo Conference+Instance ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>