force-app/main/default/objects/RTEvent__c/fields/Int_l_Spkr_Dial_in_s__c.field-meta.xml
<CustomField>
    <fullName>Int_l_Spkr_Dial_in_s__c</fullName>
    <description>Breakdown of International Toll Free Speaker Dial in #&#39;s</description>
    <inlineHelpText>ITF Spkr Dial in details</inlineHelpText>
    <label>Int&#39;l TOLL Spkr Dial in #s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>