force-app/main/default/objects/RTEvent__c/fields/Int_l_Toll_Free_Booked__c.field-meta.xml
<CustomField>
    <fullName>Int_l_Toll_Free_Booked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CAUTION - USED IN INTEGRATIONS
Customer requested that International Toll Free numbers are booked for the RT Event.</description>
    <inlineHelpText>Were ITFs booked?</inlineHelpText>
    <label>Int&apos;l Toll Free Booked</label>
    <type>Checkbox</type>
</CustomField>