force-app/main/default/objects/RTEvent__c/fields/Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comments__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
Event Specific Comments</description>
    <inlineHelpText>Use this field for notes specific to this particular event that do not need to be seen by operators or the customer.</inlineHelpText>
    <label>Internal Event Specific Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>