force-app/main/default/objects/RTEvent__c/fields/L3_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>L3_Account_Manager__c</fullName>
    <description>Name of L3 Account Manager</description>
    <inlineHelpText>Name of L3 Account Manager</inlineHelpText>
    <label>L3 Account Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>