force-app/main/default/objects/RTEvent__c/fields/L3_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>L3_Event_Type__c</fullName>
    <label>L3 Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Dry Run</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>