force-app/main/default/objects/RTEvent__c/fields/Live_Introduction__c.field-meta.xml
<CustomField>
    <fullName>Live_Introduction__c</fullName>
    <label>Live Introduction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>