force-app/main/default/objects/RTEvent__c/fields/Live_Q_A__c.field-meta.xml
<CustomField>
    <fullName>Live_Q_A__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Live Q&amp;A</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>