force-app/main/default/objects/RTEvent__c/fields/Live_Screen_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Live_Screen_Sharing__c</fullName>
    <label>Live Screen Sharing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>