force-app/main/default/objects/RTEvent__c/fields/Meeting_Organizer__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Organizer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>Name of the person setting up and organizing the call</inlineHelpText>
    <label>Meeting Organizer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RT Events (Meeting Organizer)</relationshipLabel>
    <relationshipName>R00N50000001btjhEAA</relationshipName>
    <type>Lookup</type>
</CustomField>