force-app/main/default/objects/RTEvent__c/fields/Meeting_Organizer_Name__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Organizer_Name__c</fullName>
    <label>Meeting Organizer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>