force-app/main/default/objects/RTEvent__c/fields/Meeting_Organizer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Organizer_Phone__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>Phone number of person setting up or coordinating the event</inlineHelpText>
    <label>Meeting Organizer Phone</label>
    <type>Phone</type>
</CustomField>