force-app/main/default/objects/RTEvent__c/fields/Mobile_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Delivery__c</fullName>
    <label>Mobile Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>