force-app/main/default/objects/RTEvent__c/fields/Mountain_Timezone_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Mountain_Timezone_End_Time__c</fullName>
    <formula>IF ( DATEVALUE(End_Time2__c) &gt;=
DATE ( YEAR (DATEVALUE(End_Time2__c)),3,1)
+
(
14-
CASE( MOD(DATE ( YEAR (DATEVALUE(End_Time2__c)),3,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEVALUE(End_Time2__c)),3,1) - DATE (1900,1,7),7))
)
&amp;&amp;
DATEVALUE(End_Time2__c) &lt;
DATE ( YEAR (DATEVALUE(End_Time2__c)),11,1)
+
(
7-
CASE( MOD(DATE ( YEAR (DATEVALUE(End_Time2__c)),11,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEVALUE(End_Time2__c)),11,1) - DATE (1900,1,7),7))
),
LEFT (TEXT (MONTH(DATEVALUE(End_Time2__c))) &amp; &quot;/&quot; &amp; 
 TEXT (DAY(DATEVALUE(End_Time2__c))) &amp; &quot;/&quot; &amp; 
 TEXT (YEAR(DATEVALUE(End_Time2__c))) &amp; &quot; &quot; &amp; 
 TEXT (HOUR((TIMEVALUE( End_Time2__c - 6/24 )))) &amp; &quot;:&quot; &amp; 
 MID(TEXT ((End_Time2__c)),15,2) 
,20) &amp;
IF(
  VALUE( MID( TEXT( End_Time2__c - 6/24 ), 12, 2 ) ) &lt; 12,
  &quot; AM&quot;,
  &quot; PM&quot;
)
,
LEFT (TEXT (MONTH(DATEVALUE(End_Time2__c))) &amp; &quot;/&quot; &amp; 
 TEXT (DAY(DATEVALUE(End_Time2__c))) &amp; &quot;/&quot; &amp; 
 TEXT (YEAR(DATEVALUE(End_Time2__c))) &amp; &quot; &quot; &amp; 
 TEXT (HOUR((TIMEVALUE( End_Time2__c - 7/24 )))) &amp; &quot;:&quot; &amp; 
 MID(TEXT ((End_Time2__c)),15,2) 
,20) &amp;
IF(
  VALUE( MID( TEXT(End_Time2__c - 7/24 ), 12, 2 ) ) &lt; 12,
  &quot; AM&quot;,
  &quot; PM&quot;
)


)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Mountain timezone for conference end time. This is based upon converting the end time from customer to Mountain for EM/EP scheduling purposes.</inlineHelpText>
    <label>Mountain Timezone End Time</label>
    <type>Text</type>
</CustomField>