force-app/main/default/objects/RTEvent__c/fields/MP4_Archive__c.field-meta.xml
<CustomField>
    <fullName>MP4_Archive__c</fullName>
    <label>MP4 Archive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>