force-app/main/default/objects/RTEvent__c/fields/MP4_Capture__c.field-meta.xml
<CustomField>
    <fullName>MP4_Capture__c</fullName>
    <description>Synchronized audio and video feed, including slides, in Flash format to be hosted on your servers. MP4 Format only</description>
    <inlineHelpText>Synchronized audio and video feed, including slides, in Flash format to be hosted on your servers. MP4 Format only</inlineHelpText>
    <label>MP4 Capture</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>