force-app/main/default/objects/RTEvent__c/fields/Multi_Event_Registration__c.field-meta.xml
<CustomField>
    <fullName>Multi_Event_Registration__c</fullName>
    <inlineHelpText>Ability to register for multiple events</inlineHelpText>
    <label>Multi-Event Registration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>