force-app/main/default/objects/RTEvent__c/fields/No_of_PGi_LOCAL_TOLL_Participants__c.field-meta.xml
<CustomField>
    <fullName>No_of_PGi_LOCAL_TOLL_Participants__c</fullName>
    <label># of PGi LOCAL TOLL Participants</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>