force-app/main/default/objects/RTEvent__c/fields/No_of_PGi_TOLL_FREE_Speakers__c.field-meta.xml
<CustomField>
    <fullName>No_of_PGi_TOLL_FREE_Speakers__c</fullName>
    <label># of PGi TOLL-FREE Speakers</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>