force-app/main/default/objects/RTEvent__c/fields/Number_of_International_Toll_speakers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_International_Toll_speakers__c</fullName>
    <defaultValue>0</defaultValue>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText># of Int’l TOLL Speakers</inlineHelpText>
    <label># of Int’l TOLL Speakers</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>