force-app/main/default/objects/RTEvent__c/fields/Number_US_Toll_free_dial_in_participants__c.field-meta.xml
<CustomField>
    <fullName>Number_US_Toll_free_dial_in_participants__c</fullName>
    <defaultValue>0</defaultValue>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText># of N. American TOLL FREE Participants</inlineHelpText>
    <label># Domestic TOLL FREE Participants</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>