force-app/main/default/objects/RTEvent__c/fields/of_PGi_LOCAL_TOLL_Direct_Lines__c.field-meta.xml
<CustomField>
    <fullName>of_PGi_LOCAL_TOLL_Direct_Lines__c</fullName>
    <label># of PGi LOCAL TOLL Direct Lines</label>
    <length>255</length>
    <type>Text</type>
</CustomField>