force-app/main/default/objects/RTEvent__c/fields/of_SSBA_Participants__c.field-meta.xml
<CustomField>
    <fullName>of_SSBA_Participants__c</fullName>
    <description>Used for the SSBA record type to track number of participants on an SSBA meeting.</description>
    <label># of SSBA Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>