force-app/main/default/objects/RTEvent__c/fields/On_Site_Production__c.field-meta.xml
<CustomField>
    <fullName>On_Site_Production__c</fullName>
    <description>An onsite encoder or onsite support technician delivers on-premise customized webcast support</description>
    <inlineHelpText>An onsite encoder or onsite support technician delivers on-premise customized webcast support</inlineHelpText>
    <label>On-Site Production</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>