force-app/main/default/objects/RTEvent__c/fields/Opening_Script__c.field-meta.xml
<CustomField>
    <fullName>Opening_Script__c</fullName>
    <label>Opening Script</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>