force-app/main/default/objects/RTEvent__c/fields/Operator_Awareness__c.field-meta.xml
<CustomField>
    <fullName>Operator_Awareness__c</fullName>
    <description>Communication, efficiency, proactivity, responsiveness, timing (Select 1-5)</description>
    <inlineHelpText>Communication, efficiency, proactivity, responsiveness, timing (Select 1-5)</inlineHelpText>
    <label>Operator Awareness</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>