force-app/main/default/objects/RTEvent__c/fields/Operator_Demeanor__c.field-meta.xml
<CustomField>
    <fullName>Operator_Demeanor__c</fullName>
    <description>Customer rapport, adaptability, attitude that encourages success (Select 1-5)</description>
    <inlineHelpText>Customer rapport, adaptability, attitude that encourages success (Select 1-5)</inlineHelpText>
    <label>Operator Demeanor</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>