force-app/main/default/objects/RTEvent__c/fields/Operator_moderation_throughout_call__c.field-meta.xml
<CustomField>
    <fullName>Operator_moderation_throughout_call__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Operator moderation throughout call</label>
    <type>Checkbox</type>
</CustomField>