force-app/main/default/objects/RTEvent__c/fields/Operator_Overall_Impact__c.field-meta.xml
<CustomField>
    <fullName>Operator_Overall_Impact__c</fullName>
    <description>Negative, Neutral, Positive</description>
    <inlineHelpText>Negative, Neutral, Positive</inlineHelpText>
    <label>Operator Overall Performance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Above Expectations</fullName>
            </value>
            <value>
                <fullName>Met Expectations</fullName>
            </value>
            <value>
                <fullName>Below Expectations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>