force-app/main/default/objects/RTEvent__c/fields/Operator_Professionalism__c.field-meta.xml
<CustomField>
    <fullName>Operator_Professionalism__c</fullName>
    <description>Articulation, engagement, etiquette, pronunciation (Select 1-5)</description>
    <inlineHelpText>Articulation, engagement, etiquette, pronunciation (Select 1-5)</inlineHelpText>
    <label>Operator Professionalism</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>