force-app/main/default/objects/RTEvent__c/fields/Operator_Professionalism_New__c.field-meta.xml
<CustomField>
    <fullName>Operator_Professionalism_New__c</fullName>
    <description>Used by the Events team to provide a rating to outsourced operators.</description>
    <inlineHelpText>Articulation, engagement, etiquette, pronunciation</inlineHelpText>
    <label>Operator Professionalism</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Above Expectations</fullName>
            </value>
            <value>
                <fullName>Met Expectations</fullName>
            </value>
            <value>
                <fullName>Below Expectations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>