force-app/main/default/objects/RTEvent__c/fields/Operator_Rating__c.field-meta.xml
<CustomField>
    <fullName>Operator_Rating__c</fullName>
    <description>Rating for operator managing call.  5=great, 1=poor</description>
    <inlineHelpText>Rating for operator managing call.  5=great, 1=poor</inlineHelpText>
    <label>Operator Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>