force-app/main/default/objects/RTEvent__c/fields/Operator_Responsiveness__c.field-meta.xml
<CustomField>
    <fullName>Operator_Responsiveness__c</fullName>
    <inlineHelpText>Select 1-5 Includes RT rep reaching out to operator, customer reaching out to operator during live call, and ‘reverse-responsiveness’ – making sure they don’t interrupt at inappropriate times during pre-conf to go over details</inlineHelpText>
    <label>Operator Responsiveness</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>