force-app/main/default/objects/RTEvent__c/fields/Operator_Type__c.field-meta.xml
<CustomField>
    <fullName>Operator_Type__c</fullName>
    <label>Operator Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bilingual - Spanish</fullName>
            </value>
            <value>
                <fullName>Bilingual - French</fullName>
            </value>
            <value>
                <fullName>Senior/Preferred</fullName>
            </value>
            <value>
                <fullName>Experienced Operator</fullName>
            </value>
            <value>
                <fullName>Operator in Training</fullName>
            </value>
            <value>
                <fullName>Level3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>