force-app/main/default/objects/RTEvent__c/fields/ownCloud_Folder_Password__c.field-meta.xml
<CustomField>
    <fullName>ownCloud_Folder_Password__c</fullName>
    <inlineHelpText>ownCloud Folder Password generated by Event Manager via https://lastpass.com/generatepassword.php</inlineHelpText>
    <label>ownCloud Folder Password</label>
    <length>30</length>
    <type>Text</type>
</CustomField>