force-app/main/default/objects/RTEvent__c/fields/Owner_Number__c.field-meta.xml
<CustomField>
    <fullName>Owner_Number__c</fullName>
    <description>InterCall-assigned Owner Number assigned to each Access Code that has been provisioned at IC.</description>
    <formula>Access_Code__r.InterCall_Owner_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InterCall Owner Number</label>
    <type>Text</type>
</CustomField>