force-app/main/default/objects/RTEvent__c/fields/Package_Type__c.field-meta.xml
<CustomField>
    <fullName>Package_Type__c</fullName>
    <description>Indicates if the event is part of a Gold or Platinum package.</description>
    <inlineHelpText>Select if this is a Gold or Platinum package.</inlineHelpText>
    <label>Package Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>