force-app/main/default/objects/RTEvent__c/fields/Participant_Code__c.field-meta.xml
<CustomField>
    <fullName>Participant_Code__c</fullName>
    <description>PGi Participant Code</description>
    <label>Participant Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>