force-app/main/default/objects/RTEvent__c/fields/Participant_Mode__c.field-meta.xml
<CustomField>
    <fullName>Participant_Mode__c</fullName>
    <inlineHelpText>Will the participants be muted or interactive?</inlineHelpText>
    <label>Participant Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Listen Only</fullName>
                <default>true</default>
                <label>Listen Only</label>
            </value>
            <value>
                <fullName>Open/Interactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>