force-app/main/default/objects/RTEvent__c/fields/Participants_Web_Login__c.field-meta.xml
<CustomField>
    <fullName>Participants_Web_Login__c</fullName>
    <description>CVS only.  Event Mgr to populate.</description>
    <label>Participants - Web Login</label>
    <type>Url</type>
</CustomField>