force-app/main/default/objects/RTEvent__c/fields/Passcode__c.field-meta.xml
<CustomField>
    <fullName>Passcode__c</fullName>
    <formula>Access_Code__r.Passcode__c</formula>
    <label>Passcode</label>
    <type>Text</type>
</CustomField>