force-app/main/default/objects/RTEvent__c/fields/PGi_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>PGi_Client_ID__c</fullName>
    <formula>Access_Code__r.PGi_Client_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PGi Client ID</label>
    <type>Text</type>
</CustomField>