force-app/main/default/objects/RTEvent__c/fields/PGi_LOCAL_TOLL_Spkr_Dial_in_s__c.field-meta.xml
<CustomField>
    <fullName>PGi_LOCAL_TOLL_Spkr_Dial_in_s__c</fullName>
    <label>PGi LOCAL TOLL Spkr Dial in #s</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>