force-app/main/default/objects/RTEvent__c/fields/PGi_TOLL_FREE_Direct_Dial_in_s__c.field-meta.xml
<CustomField>
    <fullName>PGi_TOLL_FREE_Direct_Dial_in_s__c</fullName>
    <label>PGi TOLL-FREE Direct Dial in #s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>