force-app/main/default/objects/RTEvent__c/fields/PGi_TOLL_FREE_Spkr_Dial_in_s__c.field-meta.xml
<CustomField>
    <fullName>PGi_TOLL_FREE_Spkr_Dial_in_s__c</fullName>
    <label>PGi TOLL-FREE Spkr Dial in #s</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>