force-app/main/default/objects/RTEvent__c/fields/PL_Field_1__c.field-meta.xml
<CustomField>
    <fullName>PL_Field_1__c</fullName>
    <defaultValue>&quot;N/A&quot;</defaultValue>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>PL Field 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>