force-app/main/default/objects/RTEvent__c/fields/PL_Field_3__c.field-meta.xml
<CustomField>
    <fullName>PL_Field_3__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>PL Field 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>