force-app/main/default/objects/RTEvent__c/fields/Podcast__c.field-meta.xml
<CustomField>
    <fullName>Podcast__c</fullName>
    <label>Podcast</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>