force-app/main/default/objects/RTEvent__c/fields/Pre_Conference_Time__c.field-meta.xml
<CustomField>
    <fullName>Pre_Conference_Time__c</fullName>
    <label>Pre-Conference Time</label>
    <type>DateTime</type>
</CustomField>