force-app/main/default/objects/RTEvent__c/fields/Pre_registration_Form__c.field-meta.xml
<CustomField>
    <fullName>Pre_registration_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A custom Web page can be established for registration and payment, if applicable.</description>
    <label>Pre-registration Form</label>
    <type>Checkbox</type>
</CustomField>